# material-theme-figma-to-scss

./: .gitignore  README.md  main.py  output.css  output.json  output.module.scss  pyproject.toml
src/: constants.py  utils.py
