[tool.poetry]
name = "material-theme-figma-to-css"
version = "0.1.0"
description = ""
authors = ["Mark Fomin <mark@difhel.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
